<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context="com.example.android.drinkwaterfree.InfoActivity"
    android:background="@color/colorBackground"
    android:padding="8dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="12dp"
        android:paddingRight="8dp"
        android:textStyle="bold"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:text="@string/header_safe_to_drink"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"

        android:paddingRight="8dp"
        android:textColor="@color/whiteText"
        android:text="@string/safe_to_drink"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:textStyle="bold"
        android:textColor="@color/whiteText"
        android:text="@string/header_quit"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/whiteText"
        android:text="@string/quit_buying_bottled_water"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:textColor="@color/whiteText"
        android:text="@string/copywrite"/>


</LinearLayout>
